<resources>
    <string name="app_name">Court Counter</string>

    <!-- Team names here -->
    <string name="home">Red</string>
    <string name="away">Blue</string>
    <string name="homeScore">0</string>
    <string name="awayScore">0</string>

    <!--Button text here -->
    <string name="threePoint">+ 3 Points</string>
    <string name="twoPoint">+ 2 Points</string>
    <string name="freeThrow">Free Throw</string>
    <string name="resetButton">Reset</string>
    <string name="redStats">Stats</string>
    <string name="blueStats">Stats</string>

    <!-- Text here -->
    <string name="redThrees">0</string>
    <string name="redTwos">0</string>
    <string name="redFrees">0</string>

    <string name="blueThrees">0</string>
    <string name="blueTwos">0</string>
    <string name="blueFrees">0</string>

</resources>
